--- a/haskell-fe.cabal
+++ b/haskell-fe.cabal
@@ -20,6 +20,6 @@ executable haskell-fe
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9, lens >= 4.0
+  build-depends:       base >=4.8 && <4.9, lens >= 4.0, random
   hs-source-dirs:      src
   default-language:    Haskell2010
