--- a/haskell-fe.cabal
+++ b/haskell-fe.cabal
@@ -20,6 +20,13 @@ executable haskell-fe
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9, lens >= 4.0, random, scalpel >= 0.3.0, aeson >= 0.11.0, aeson-pretty >= 0.7.2, containers
+  build-depends:       base >=4.8 && <4.9
+                     , lens >= 4.0
+                     , random
+                     , scalpel >= 0.3.0
+                     , aeson >= 0.11.0
+                     , aeson-pretty >= 0.7.2
+                     , containers
+                     , bytestring
   hs-source-dirs:      src
   default-language:    Haskell2010
